--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ video by Jeri Ellsworth.</p>
 
 <ul>
 <li>
-<a href="hw">hw</a> contains KiCad files for the DE1 addon board. Check out the <a href="hw/videoadc.pdf">schematic</a>.</li>
+<a href="https://github.com/svofski/videoconditioner/hw">hw</a> contains KiCad files for the DE1 addon board. Check out the <a href="hw/videoadc.pdf">schematic</a>.</li>
 <li>
-<a href="iverilog">iverilog</a> contains simulation of video signals as produced by BK-0010, and their detection</li>
+<a href="https://github.com/svofski/videoconditioner/iverilog">iverilog</a> contains simulation of video signals as produced by BK-0010, and their detection</li>
 <li>
-<a href="src">src</a> Altera Quartus II project and synthesizable core</li>
+<a href=https://github.com/svofski/videoconditioner/"src">src</a> Altera Quartus II project and synthesizable core</li>
 </ul>
 
 <h2>
@@ -118,9 +118,9 @@ required, being able to implement video decoding on the lowest possible level ca
 
 <ul>
 <li>
-<a href="/whitepapers/CreatingAnADCUsingFPGAResources.PDF">Leveraging FPGA and CPLD Digital Logic to Implement Analog To Digital Converters</a> LatticeSemi Whitepaper</li>
+<a href="https://github.com/svofski/videoconditioner/whitepapers/CreatingAnADCUsingFPGAResources.PDF">Leveraging FPGA and CPLD Digital Logic to Implement Analog To Digital Converters</a> LatticeSemi Whitepaper</li>
 <li>
-<a href="/whitepapers/SimpleSigmaDeltaADCDocumentation.PDF">Simple Sigma-Delta ADC</a> LatticeSemi RD1066</li>
+<a href="https://github.com/svofski/videoconditioner/whitepapers/SimpleSigmaDeltaADCDocumentation.PDF">Simple Sigma-Delta ADC</a> LatticeSemi RD1066</li>
 </ul>
       </section>
       <footer>
