--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ video by Jeri Ellsworth.</p>
 <li>
 <a href="https://github.com/svofski/videoconditioner/tree/vector06c/iverilog">iverilog</a> contains simulation of video signals as produced by BK-0010, and their detection</li>
 <li>
-<a href=https://github.com/svofski/videoconditioner/tree/vector06c/src">src</a> Altera Quartus II project and synthesizable core</li>
+<a href="https://github.com/svofski/videoconditioner/tree/vector06c/src">src</a> Altera Quartus II project and synthesizable core</li>
 </ul>
 
 <h2>
