--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h1>
-<a id="videoconditioner" class="anchor" href="#videoconditioner" aria-hidden="true"><span class="octicon octicon-link"></span></a>videoconditioner</h1>
+<a id="videoconditioner" class="anchor" href="#videoconditioner" aria-hidden="true"><span class="octicon octicon-link"></span></a>Video Conditioner</h1>
 
 <h2>
 <a id="rgb-video-input-for-altera-de1-board--pal-modulator" class="anchor" href="#rgb-video-input-for-altera-de1-board--pal-modulator" aria-hidden="true"><span class="octicon octicon-link"></span></a>RGB video input for Altera DE1 board + PAL Modulator</h2>
