--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       </header>
       <section>
         <h1>
-<a id="videoconditioner" class="anchor" href="#videoconditioner" aria-hidden="true"><span class="octicon octicon-link"></span></a>Video Conditioner</h1>
+<a id="non-standard-rgb-video-conditioner" class="anchor" href="#non-standard-rgb-video-conditioner" aria-hidden="true"><span class="octicon octicon-link"></span></a>Non-standard RGB video conditioner</h1>
 
-<h2>
-<a id="rgb-video-input-for-altera-de1-board--pal-modulator" class="anchor" href="#rgb-video-input-for-altera-de1-board--pal-modulator" aria-hidden="true"><span class="octicon octicon-link"></span></a>RGB video input for Altera DE1 board + PAL Modulator</h2>
+<h1>
+<a id="rgb-video-input-for-altera-de1-board--pal-modulator" class="anchor" href="#rgb-video-input-for-altera-de1-board--pal-modulator" aria-hidden="true"><span class="octicon octicon-link"></span></a>RGB video input for Altera DE1 board + PAL Modulator</h1>
 
 <p>This is an experimental video capture project. 
 The goal is to capture poorly modulated RGB + Sync signal as produced by an old Soviet home PC,
@@ -63,19 +63,78 @@ by Ted Marena. There's also an excellent explanation and demonstration of the pr
 video by Jeri Ellsworth.</p>
 
 <h2>
-<a id="project-structure" class="anchor" href="#project-structure" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project structure</h2>
+<a id="block-diagram" class="anchor" href="#block-diagram" aria-hidden="true"><span class="octicon octicon-link"></span></a>Block diagram</h2>
+
+<p>Here's a simplified diagram of the project:</p>
+
+<p><img src="/screenshots/diagram.png" alt="Diagram"></p>
+
+<p>The video signal comprised of H+V composite sync and R, G, B signals is level-shifted to be within
+range of LVDS inputs (see schematic) and is fed into the ADC. The ADC modules feed back the resulting
+PDM signal to the negative side of LVDS inputs, and to the input averaging filter. The recovered
+PCM signal is formed on the output of the filter. There are variations of input filters in the source code.</p>
+
+<p>The recovered sync signal is passed to the input of sync detector module, which tries its best to 
+recover horizontal and vertical sync pulses. It's designed to be able to cope with bizarre sync signals
+produced by bizarre computers. It does the job with variable success. Usually the problems are of electrical
+rather than of logical nature. For example, Вектор-06ц is known to have no equalization pulses, which
+results in huge amplitude jumps during vertical sync or even simply empty lines.</p>
+
+<p>The resulting sync, R, G, B signals are fed into the video generator module. It consists of sync generator
+and PAL modulator. The outputs are chroma, luma and mixed CVBS composite signals. They are output either
+using primitive linear DAC on VGA connector of DE1 board, or using a sigma-delta modulator. The latter
+allows for having separate luma + chroma (S-Video) signals on the output. </p>
+
+<h2>
+<a id="generating-output" class="anchor" href="#generating-output" aria-hidden="true"><span class="octicon octicon-link"></span></a>Generating output</h2>
+
+<p>S-video using a sigma-delta DAC is very simple:</p>
+
+<pre><code>reg [DAC_RESOLUTION:0] ydac;
+reg [DAC_RESOLUTION:0] cdac;
+always @(posedge clk_out)
+begin
+    ydac &lt;= ydac[DAC_RESOLUTION-1:0] + tv_luma[RESOLUTION-1:RESOLUTION-DAC_RESOLUTION]; 
+    cdac &lt;= cdac[DAC_RESOLUTION-1:0] + tv_chroma[RESOLUTION-1:RESOLUTION-DAC_RESOLUTION]; 
+end
+
+assign GPIO_0[10] = ydac[DAC_RESOLUTION];
+assign GPIO_0[11] = cdac[DAC_RESOLUTION];
+</code></pre>
+
+<p>Linear DAC on VGA pins of DE1 board is more interesting. The resistor DAC on DE1 allows 4 bits per channel,
+or just 16 levels. This is not a lot for composite analog video. Here's what a saw waveform looks like
+if only 4 bits are used:</p>
+
+<p><img src="/screenshots/4-bits-RGB-all-equal.jpg" alt="4 bits DAC saw wave"> </p>
+
+<p>However with a little bit of magic, <a href="http://sensi.org/%7Esvo/de1videodac/">described in detail in my article here</a>,
+it is possible to get much higher resolution from this DAC. Here's an example:</p>
+
+<p><img src="/screenshots/linearized.jpg" alt="Linearized saw wave"></p>
+
+<p>The magic DAC is implemented using a look-up table:</p>
+
+<pre><code>dactable dactaklakpak(.address(tv_cvbs), .clock(clkpalFSC), .q(dacval));
+assign VGA_R = dacval[3:0];
+assign VGA_G = dacval[7:4];
+assign VGA_B = dacval[11:8];
+</code></pre>
+
+<h1>
+<a id="project-files" class="anchor" href="#project-files" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project files</h1>
 
 <ul>
 <li>
-<a href="https://github.com/svofski/videoconditioner/tree/vector06c/hw">hw</a> contains KiCad files for the DE1 addon board. Check out the <a href="https://github.com/svofski/videoconditioner/tree/vector06c/hw/videoadc.pdf">schematic</a>.</li>
+<a href="hw">hw</a> contains KiCad files for the DE1 addon board. Check out the <a href="hw/videoadc.pdf">schematic</a>.</li>
 <li>
-<a href="https://github.com/svofski/videoconditioner/tree/vector06c/iverilog">iverilog</a> contains simulation of video signals as produced by BK-0010, and their detection</li>
+<a href="iverilog">iverilog</a> contains simulation of video signals as produced by BK-0010, and their detection</li>
 <li>
-<a href="https://github.com/svofski/videoconditioner/tree/vector06c/src">src</a> Altera Quartus II project and synthesizable core</li>
+<a href="src">src</a> Altera Quartus II project and synthesizable core</li>
 </ul>
 
-<h2>
-<a id="results" class="anchor" href="#results" aria-hidden="true"><span class="octicon octicon-link"></span></a>Results</h2>
+<h1>
+<a id="results" class="anchor" href="#results" aria-hidden="true"><span class="octicon octicon-link"></span></a>Results</h1>
 
 <p>The input board looks like this:</p>
 
@@ -87,7 +146,7 @@ video by Jeri Ellsworth.</p>
 
 <p>Single channel passthrough from C64. Signal sampled and output on DE1 VGA pins without any conditioning.</p>
 
-<p><a href="https://www.flickr.com/photos/svofski/14606473808/"><img src="https://farm4.staticflickr.com/3893/14606473808_44bb70ef14_m.jpg" alt="C64"></a></p>
+<p><a href="https://www.flickr.com/photos/svofski/14606473808/"><img src="https://farm4.staticflickr.com/3893/14606473808_44bb70ef14_m.jpg" alt="Graphics by Crest/Oxyron"></a></p>
 
 <p>RGB+Sync from Vector-06c</p>
 
@@ -95,8 +154,8 @@ video by Jeri Ellsworth.</p>
 
 <p><a href="http://zx-pk.ru/showthread.php?t=23833">Work log on a forum (in Russian)</a></p>
 
-<h2>
-<a id="conclusion" class="anchor" href="#conclusion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conclusion</h2>
+<h1>
+<a id="conclusion" class="anchor" href="#conclusion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conclusion</h1>
 
 <p>This is a research project and I never made it into a finished box with just power plug
 and connectors. It works, but is not perfect. The results on my monitor are acceptable.
@@ -113,15 +172,19 @@ But with a such chip I would not be able to extract nonstandard
 video signal from Вектор-06ц, just like my monitor cannot do that. Where flexibility and fine control is
 required, being able to implement video decoding on the lowest possible level can be beneficial.</p>
 
-<h2>
-<a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h2>
+<h1>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h1>
 
 <ul>
 <li>
-<a href="https://github.com/svofski/videoconditioner/tree/vector06c/whitepapers/CreatingAnADCUsingFPGAResources.PDF">Leveraging FPGA and CPLD Digital Logic to Implement Analog To Digital Converters</a> LatticeSemi Whitepaper</li>
+<a href="/whitepapers/CreatingAnADCUsingFPGAResources.PDF">Leveraging FPGA and CPLD Digital Logic to Implement Analog To Digital Converters</a> LatticeSemi Whitepaper</li>
 <li>
-<a href="https://github.com/svofski/videoconditioner/tree/vector06c/whitepapers/SimpleSigmaDeltaADCDocumentation.PDF">Simple Sigma-Delta ADC</a> LatticeSemi RD1066</li>
+<a href="/whitepapers/SimpleSigmaDeltaADCDocumentation.PDF">Simple Sigma-Delta ADC</a> LatticeSemi RD1066</li>
 </ul>
+
+<hr>
+
+<p>2014-2015 Viacheslav Slavinsky, <a href="http://sensi.org/%7Esvo">http://sensi.org/~svo</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/svofski">svofski</a></p>
