--- a/index.html
+++ b/index.html
@@ -50,5 +50,14 @@
     <div role='flatdoc-content' class='content'></div>
   </div>
 
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3398743-2");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 </body>
 </html>
